# save-manager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  save-manager.json  vcpkg.json
cmake/: version.h.in
scripts/: duplicate_saves.py  package.py
src/: Conf.cpp  Conf.hpp  PCH.h  Save.cpp  Save.hpp  plugin.cpp  plugin_init.hpp  savetools.cpp  savetools.hpp  tools.cpp  tools.hpp  wintools.cpp  wintools.hpp  zip.cpp  zip.hpp  ziptools.cpp  ziptools.hpp
